--- a/artifacts/serve/package.json
+++ b/artifacts/serve/package.json
@@ -3,10 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "dependencies": {
-        "koa": "latest",
-        "koa-static": "latest",
-        "koa-compress": "latest",
-        "koa-router": "latest",
-        "koa-mount": "latest"
+        "express": "latest",
+        "compression": "latest"
     }
 }
