ci(app): update workflow yml

--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -22,6 +22,7 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v1'
       with:
+        workload_identity_provider: '${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}'
         service_account: '${{ secrets.GCP_ACCOUNT }}'
 
     - id: 'deploy'
