--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -11,6 +11,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
     permissions:
       contents: 'read'
       id-token: 'write'
