ci(app): replace service with default

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: nodejs16
-service: server
+service: default
 entrypoint: npm start
 env_variables:
   DATABASE_SOCKET_PATH: /cloudsql/visualization-awap-12:europe-west1:visualization-database
