--- a/app.yaml
+++ b/app.yaml
@@ -2,5 +2,5 @@ runtime: nodejs16
 service: default
 entrypoint: npm start
 env_variables:
-  DATABASE_SOCKET_PATH: /cloudsql/visualization-awap-12:europe-west1:visualization-database
+  DATABASE_SOCKET_PATH: /cloudsql/visualization-awap-12:europe-north1:visualization-database
   DATABASE_PASSWORD: CloudSQLPSW1
