--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -41,6 +41,7 @@ jobs:
           DATABASE_SOCKET_PATH: /cloudsql/${{ env.DATABASE_CONNECTION_NAME }}
           DATABASE_PASSWORD: ${{ env.DATABASE_PASSWORD }}
           SERVER_HOST: 0.0.0.0
+          DEBUG=*,-sequelize:*,-koa:*,-express:*
         EOL
 
     - id: 'auth'
