ci(app): increase instance class

--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         cat >> app.yaml <<EOL
         runtime: nodejs18
+        instance_class: F4
         service: ${{ matrix.service }}
         entrypoint: ${{ matrix.entrypoint }}
         env_variables:
