--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -36,6 +36,9 @@ jobs:
         cat >> app.yaml <<EOL
         runtime: nodejs18
         instance_class: F4
+        basic_scaling:
+          max_instances: 2
+          idle_timeout: 10m
         service: ${{ matrix.service }}
         entrypoint: ${{ matrix.entrypoint }}
         env_variables:
