docs(app): add design document

--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -48,6 +48,7 @@ jobs:
           DATABASE_PASSWORD: ${{ env.DATABASE_PASSWORD }}
           SERVER_HOST: 0.0.0.0
           DEBUG: '*,-sequelize:*,-koa:*,-express:*'
+          TEMP: /tmp
         EOL
 
     - id: 'auth'
