--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -13,10 +13,6 @@ jobs:
 
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
-    env:
-      DATABASE_CONNECTION_NAME: visualization-awap-12:europe-north1:visualization-database
-      DATABASE_PASSWORD: CloudSQLPSW1
-
     strategy:
       matrix:
         service: [default]
@@ -44,11 +40,10 @@ jobs:
         service: ${{ matrix.service }}
         entrypoint: ${{ matrix.entrypoint }}
         env_variables:
-          DATABASE_SOCKET_PATH: /cloudsql/${{ env.DATABASE_CONNECTION_NAME }}
-          DATABASE_PASSWORD: ${{ env.DATABASE_PASSWORD }}
+          DATABASE_SOCKET_PATH: /cloudsql/${{ secrets.DATABASE_CONNECTION_NAME }}
+          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
           SERVER_HOST: 0.0.0.0
           DEBUG: '*,-sequelize:*,-koa:*,-express:*'
-          TEMP: /tmp
         EOL
 
     - id: 'auth'
