feat(artifact): add simple jwt auth

--- a/.github/workflows/app-engine-deploy.yml
+++ b/.github/workflows/app-engine-deploy.yml
@@ -15,6 +15,7 @@ jobs:
 
     strategy:
       matrix:
+        # The deployment settings should list multiple services here.
         service: [default]
         entrypoint: [
           "node artifacts/default/bin/www"
