--- a/artifacts/google/package.json
+++ b/artifacts/google/package.json
@@ -1,6 +1,7 @@
 {
     "name": "google",
     "version": "1.0.0",
+    "main": "app.js",
     "dependencies": {
         "@google-cloud/storage": "latest"
     }
