--- a/.github/workflows/node-test.yml
+++ b/.github/workflows/node-test.yml
@@ -30,6 +30,7 @@ jobs:
           sudo /etc/init.d/mysql start
           mysql -e 'CREATE DATABASE ${{ env.DATABASE_URL }};' -u${{ env.DATABASE_USER }} -p${{ env.DATABASE_PASSWORD }}
           mysql -e 'SHOW DATABASES;' -u${{ env.DATABASE_USER }} -p${{ env.DATABASE_PASSWORD }}
+          mysql -e 'SHOW variables LIKE "port";' -u${{ env.DATABASE_USER }} -p${{ env.DATABASE_PASSWORD }}
 
       - uses: actions/checkout@v3
 
